--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
-    "lib": [
-      "esnext"
-    ],
-    "types": [
-      "@cloudflare/workers-types"
-    ],
+    "lib": ["esnext"],
+    "types": ["@cloudflare/workers-types"],
     "jsx": "react-jsx",
     "jsxFragmentFactory": "Fragment",
     "jsxImportSource": "hono/jsx"
