--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,23 @@
 {
-    "name": "chatgpt-linebot-with-cloudflare",
-    "build": {
-      "dockerfile": "Dockerfile",
-      "cacheFrom": "ghcr.io/nmemoto/chatgpt-linebot-with-cloudflare"
-    },
-    "customizations": {
-      "vscode": {
-        "extensions": [
-          "GitHub.vscode-pull-request-github",
-          "eamodio.gitlens",
-          "esbenp.prettier-vscode"
-        ]
-      }
-    },
-    "features": {
-      "ghcr.io/devcontainers/features/github-cli:1": {
-        "version": "latest"
-      }
-    },
-    "remoteUser": "node",
-    "postCreateCommand": "sudo apt-get update -y && sudo apt-get install -y xdg-utils"
-  }
-  
+  "name": "lineflare",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "cacheFrom": "ghcr.io/HikaruEgashira/lineflare"
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "GitHub.vscode-pull-request-github",
+        "eamodio.gitlens",
+        "esbenp.prettier-vscode"
+      ]
+    }
+  },
+  "features": {
+    "ghcr.io/devcontainers/features/github-cli:1": {
+      "version": "latest"
+    }
+  },
+  "remoteUser": "node",
+  "postCreateCommand": "sudo apt-get update -y && sudo apt-get install -y xdg-utils"
+}
